Testing CI/CD with demo api
